--- a/crates/contract_events/Cargo.toml
+++ b/crates/contract_events/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+contract-metadata="1.5.1"
+contract-transcode="0.2.0"
