--- a/crates/contract_events/Cargo.toml
+++ b/crates/contract_events/Cargo.toml
@@ -12,3 +12,5 @@ subxt="0.24.0"
 sp-core = "7.0.0"
 sp-weights = "4.0.0"
 scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
+
+tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
