--- a/crates/contract_events/Cargo.toml
+++ b/crates/contract_events/Cargo.toml
@@ -15,3 +15,4 @@ scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive
 serde="*"
 serde_json="*"
 tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
+hex-literal="*"
